@@ -1,3 +1,13 @@
+2016-09-02  Ethan A Merritt  <merritt@u.washington.edu >
+
+	* src/datafile.c (df_generate_pseudodata):
+	Grid coordinates generated by splot '++' are subject to round-off error.
+	This error is most noticeable at the plot boundary, where it may be that
+	(sample_min + nsteps * stepsize != sample_max). This is more likely to
+	be visible on 32-bit systems than on 64-bit systems.
+	Force the final grid coordinate to be exactly sample_max.
+	Bug #1850
+
 2016-09-01  Ethan A Merritt  <merritt@u.washington.edu >
 
 	* term/pslatex.trm:  The begin/end of plot bookkeeping of internal state
